Closes branch issue#652 Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/admin/investigation.xhtml
+++ b/src/main/webapp/admin/investigation.xhtml
@@ -7,8 +7,8 @@
       xmlns:f="http://xmlns.jcp.org/jsf/core">
 
     <h:body>
-        <ui:composition template="/lab/administration.xhtml">
-            <ui:define name="subcontent">
+        <ui:composition template="/admin/admin_items_index.xhtml">
+            <ui:define name="item">
                 <h:panelGroup >
                     <h:form id="form"  >
                         <p:growl />
