--- a/src/main/webapp/common/form_format.xhtml
+++ b/src/main/webapp/common/form_format.xhtml
@@ -1,14 +1,14 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1transitional.dtd">
 <ui:composition xmlns:ui="http://java.sun.com/jsf/facelets"
-                template="/resources/template/template.xhtml"
+                template="/admin/admin_items_index.xhtml"
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:p="http://primefaces.org/ui">
 
 
-    <ui:define name="content">
+    <ui:define name="item">
         <h:panelGroup rendered="#{!webUserController.hasPrivilege('HrAdmin')}" >
             You are NOT Authorized
         </h:panelGroup>
@@ -18,7 +18,7 @@
                 <p:panelGrid columns="2" styleClass="alignTop" >
                     <h:panelGroup>
                         <p:panel header="Report">
-                            <p:selectOneMenu id="mnuCat" value="#{commonReportItemController.category}" >
+                            <p:selectOneMenu id="mnuCat" value="#{commonReportItemController.category}" style="width: 400px;">
                                 <f:selectItem itemLabel="Select Format" />
                                 <f:selectItems value="#{formFormatController.items}" var="rf" itemLabel="#{rf.name}" itemValue="#{rf}" />
                                 <f:ajax event="change" execute="mnuCat" render="@all" />
@@ -49,22 +49,22 @@
 
                             <h:panelGrid  columns="2">
                                 <h:outputText value="Name"   />
-                                <h:inputText autocomplete="off" id="lblIiName" value="#{commonReportItemController.current.name}" >
+                                <h:inputText autocomplete="off" id="lblIiName" value="#{commonReportItemController.current.name}" style="width: 400px;">
                                     <f:ajax event="keyup" execute="lblIiName" render=":#{p:resolveFirstComponentWithId('pPreview',view).clientId}"/>
                                 </h:inputText>
 
                                 <h:outputText value="Type"/>
-                                <h:selectOneListbox id="cmbItemType" value="#{commonReportItemController.current.ixItemType}" size="1" >
+                                <p:selectOneListbox id="cmbItemType" value="#{commonReportItemController.current.ixItemType}" scrollHeight="300" class="w-100" style="min-width: 400px" >
                                     <f:selectItem itemLabel="Label" itemValue="Label"/>
                                     <f:selectItem itemLabel="Value" itemValue="Value"/>
                                     <f:selectItem itemLabel="Combo" itemValue="ItemsCatetgory"/>
-                                </h:selectOneListbox>
+                                </p:selectOneListbox>
 
                                 <h:outputText value="Content"/>
-                                <h:selectOneListbox id="cmbReportItemType" value="#{commonReportItemController.current.reportItemType}" size="1" >
+                                <p:selectOneListbox id="cmbReportItemType" value="#{commonReportItemController.current.reportItemType}" scrollHeight="500" class="w-100" style="min-width: 400px"  >
                                     <f:selectItem itemLabel="No Content"/>
                                     <f:selectItems value="#{enumController.reportItemTypes}" ></f:selectItems>
-                                </h:selectOneListbox>
+                                </p:selectOneListbox>
 
                                 <h:outputText value="Category"/>
                                 <p:autoComplete value="#{commonReportItemController.current.referringCategory}" 
@@ -72,42 +72,44 @@
                                                 var="cat"
                                                 itemLabel="#{cat.name}"
                                                 itemValue="#{cat}"
-                                                converter="categoryConverter"></p:autoComplete>
+                                                converter="categoryConverter"
+                                                style="width: 400px;"
+                                                ></p:autoComplete>
 
                                 <h:outputText value="Align"/>
-                                <h:selectOneListbox  id="cmbTxtAlign" value="#{commonReportItemController.current.cssTextAlign}" size="1" >
+                                <p:selectOneListbox  id="cmbTxtAlign" value="#{commonReportItemController.current.cssTextAlign}" scrollHeight="500" class="w-100" style="min-width: 400px" >
                                     <f:selectItem itemLabel="Left" itemValue="Left"/>
                                     <f:selectItem itemLabel="Right" itemValue="Right"/>
                                     <f:selectItem itemLabel="Center" itemValue="Center"/>
                                     <f:selectItem itemLabel="Justify" itemValue="Justify"/>
                                     <f:selectItem itemLabel="Inherit" itemValue="Inherit"/>
-                                </h:selectOneListbox>
+                                </p:selectOneListbox>
 
 
 
 
                                 <h:outputText value="Left" />
-                                <p:inputText autocomplete="off" maxlength="3" id="txtLeft" value="#{commonReportItemController.current.riLeft}"/>
+                                <p:inputText autocomplete="off" maxlength="3" id="txtLeft" value="#{commonReportItemController.current.riLeft}" style="width: 400px;"/>
 
                                 <h:outputText value="Top"/>
-                                <p:inputText autocomplete="off" maxlength="3" id="txtTop" value="#{commonReportItemController.current.riTop}"/>
+                                <p:inputText autocomplete="off" maxlength="3" id="txtTop" value="#{commonReportItemController.current.riTop}" style="width: 400px;"/>
 
 
 
                                 <h:outputText value="Font Size"/>
-                                <p:inputText autocomplete="off" maxlength="3" id="txtFontSize" value="#{commonReportItemController.current.riFontSize}" />
+                                <p:inputText autocomplete="off" maxlength="3" id="txtFontSize" value="#{commonReportItemController.current.riFontSize}" style="width: 400px;"/>
 
 
                                 <h:outputText value="Width"/>
-                                <p:inputText autocomplete="off" maxlength="3" id="txtWidth" value="#{commonReportItemController.current.riWidth}" />
+                                <p:inputText autocomplete="off" maxlength="3" id="txtWidth" value="#{commonReportItemController.current.riWidth}" style="width: 400px;"/>
 
                                 <h:outputText value="Height"/>
-                                <p:inputText autocomplete="off" maxlength="3" id="txtHeight" value="#{commonReportItemController.current.riHeight}"/>
+                                <p:inputText autocomplete="off" maxlength="3" id="txtHeight" value="#{commonReportItemController.current.riHeight}" style="width: 400px;"/>
 
 
 
                                 <h:outputText value="Value Type"/>
-                                <h:selectOneListbox id="cmbValueType" value="#{commonReportItemController.current.ixItemValueType}" size="1" >
+                                <p:selectOneListbox id="cmbValueType" value="#{commonReportItemController.current.ixItemValueType}" scrollHeight="500" class="w-100" style="min-width: 400px" >
                                     <f:selectItem itemLabel="Varchar" itemValue="Varchar"/>
                                     <f:selectItem itemLabel="Memo" itemValue="Memo"/>
                                     <f:selectItem itemLabel="float" itemValue="float"/>
@@ -117,7 +119,7 @@
                                     <f:selectItem itemLabel="Line" itemValue="Line"/>
                                     <f:selectItem itemLabel="Rectangle" itemValue="Rectangle"/>
                                     <f:selectItem itemLabel="Circle" itemValue="Circle"/>
-                                </h:selectOneListbox>
+                                </p:selectOneListbox>
 
                                 <h:outputText value="Position Type"/>
                                 <h:selectOneListbox id="cmbPosition" value="#{commonReportItemController.current.cssPosition}" size="1" >
@@ -141,69 +143,70 @@
                                 </h:selectOneListbox>
 
                                 <h:outputText value="Over Flow"/>
-                                <h:selectOneListbox id="cmbType" value="#{commonReportItemController.current.cssOverflow}" size="1" >
+                                <p:selectOneListbox id="cmbType" value="#{commonReportItemController.current.cssOverflow}" scrollHeight="300" class="w-100" style="min-width: 400px"  >
                                     <f:selectItem itemLabel="Auto" itemValue="auto"/>
                                     <f:selectItem itemLabel="Hidden" itemValue="hidden"/>
                                     <f:selectItem itemLabel="Scroll" itemValue="scroll"/>
                                     <f:selectItem itemLabel="Visible" itemValue="visible"/>
                                     <f:selectItem itemLabel="Inherit" itemValue="Inherit"/>
-                                </h:selectOneListbox>
+                                </p:selectOneListbox>
                                 <h:outputText value="Font Style"/>
-                                <h:selectOneListbox  id="cmbPos" value="#{commonReportItemController.current.cssFontStyle}" size="1" >
+                                <p:selectOneListbox  id="cmbPos" value="#{commonReportItemController.current.cssFontStyle}" scrollHeight="300" class="w-100" style="min-width: 400px"  >
                                     <f:selectItem itemLabel="Normal" itemValue="Normal"/>
                                     <f:selectItem itemLabel="Italic" itemValue="Italic"/>
                                     <f:selectItem itemLabel="Oblique" itemValue="Oblique"/>
-                                </h:selectOneListbox>
+                                </p:selectOneListbox>
 
 
 
                                 <h:outputText value="Z Order" />
-                                <p:inputText autocomplete="off" id="txtZOrder" value="#{commonReportItemController.current.cssZorder}"/>
+                                <p:inputText autocomplete="off" id="txtZOrder" value="#{commonReportItemController.current.cssZorder}" style="width: 400px;"/>
 
                                 <h:outputText value="Clip"/>
-                                <p:inputText autocomplete="off" id="txtClip" value="#{commonReportItemController.current.cssClip}"/>
+                                <p:inputText autocomplete="off" id="txtClip" value="#{commonReportItemController.current.cssClip}" style="width: 400px;"/>
 
                                 <h:outputText value="Font Family"/>
-                                <p:inputText autocomplete="off" id="txtFontFamily" value="#{commonReportItemController.current.cssFontFamily}"/>
+                                <p:inputText autocomplete="off" id="txtFontFamily" value="#{commonReportItemController.current.cssFontFamily}" style="width: 400px;"/>
 
                                 <h:outputText value="Font Variant"/>
-                                <p:inputText autocomplete="off" id="txtFontVariant" value="#{commonReportItemController.current.cssFontVariant}"/>
+                                <p:inputText autocomplete="off" id="txtFontVariant" value="#{commonReportItemController.current.cssFontVariant}" style="width: 400px;"/>
 
                                 <h:outputText value="Font Weight"/>
-                                <p:inputText autocomplete="off" id="txtFontWeight" value="#{commonReportItemController.current.cssFontWeight}"/>
+                                <p:inputText autocomplete="off" id="txtFontWeight" value="#{commonReportItemController.current.cssFontWeight}" style="width: 400px;"/>
 
                                 <h:outputText value="Border Radius"/>
-                                <p:inputText autocomplete="off" id="txtBorderRadius" value="#{commonReportItemController.current.cssBorderRadius}"/>
+                                <p:inputText autocomplete="off" id="txtBorderRadius" value="#{commonReportItemController.current.cssBorderRadius}" style="width: 400px;"/>
 
                                 <h:outputText value="Line Hegiht"/>
-                                <p:inputText autocomplete="off" id="txtLineHeight" value="#{commonReportItemController.current.cssLineHeight}"/>
+                                <p:inputText autocomplete="off" id="txtLineHeight" value="#{commonReportItemController.current.cssLineHeight}" style="width: 400px;"/>
 
                                 <h:outputText value="Margin"/>
-                                <p:inputText autocomplete="off" id="txtMargin" value="#{commonReportItemController.current.cssMargin}"/>
+                                <p:inputText autocomplete="off" id="txtMargin" value="#{commonReportItemController.current.cssMargin}" style="width: 400px;"/>
 
                                 <h:outputText value="Padding"/>
-                                <p:inputText autocomplete="off" id="txtPadding" value="#{commonReportItemController.current.cssPadding}"/>
+                                <p:inputText autocomplete="off" id="txtPadding" value="#{commonReportItemController.current.cssPadding}" style="width: 400px;"/>
 
                                 <h:outputText value="Border"/>
-                                <p:inputText autocomplete="off" id="txtBorder" value="#{commonReportItemController.current.cssBorder}"/>
+                                <p:inputText autocomplete="off" id="txtBorder" value="#{commonReportItemController.current.cssBorder}" style="width: 400px;"/>
 
                                 <h:outputText value="Color"/>
-                                <p:inputText autocomplete="off" id="txtColor" value="#{commonReportItemController.current.cssColor}"/>
+                                <p:inputText autocomplete="off" id="txtColor" value="#{commonReportItemController.current.cssColor}" style="width: 400px;"/>
 
                                 <h:outputText value="Back Color"/>
-                                <p:inputText autocomplete="off" id="txtBackColor" value="#{commonReportItemController.current.cssBackColor}"/>
+                                <p:inputText autocomplete="off" id="txtBackColor" value="#{commonReportItemController.current.cssBackColor}" style="width: 400px;"/>
 
                                 <h:outputText value="Perfix"/>
-                                <p:inputText autocomplete="off" id="txtPrefix" value="#{commonReportItemController.current.formatPrefix}"/>
+                                <p:inputText autocomplete="off" id="txtPrefix" value="#{commonReportItemController.current.formatPrefix}" style="width: 400px;"/>
 
                                 <h:outputText value="Suffix"/>
-                                <p:inputText autocomplete="off" id="txtSuffix" value="#{commonReportItemController.current.formatSuffix}"/>
+                                <p:inputText autocomplete="off" id="txtSuffix" value="#{commonReportItemController.current.formatSuffix}" style="width: 400px;"/>
 
-                               
+
                             </h:panelGrid>
                         </p:panel>
                     </h:panelGroup>
-
+                    
+                    <p:panel style="height: 3850px">
                     <h:panelGroup id="pPreview"  >
                         <div style="width:21cm;height: 29.7cm; border: 1px solid black; position: relative; font-size: 150%;">
                             <ui:repeat value="#{commonReportItemController.items}" var="myIi" >
@@ -221,7 +224,7 @@
                             </ui:repeat>
                         </div>
                     </h:panelGroup>
-
+                        </p:panel>
 
                 </p:panelGrid>
             </h:form>
