--- a/src/main/webapp/common/form_format_category.xhtml
+++ b/src/main/webapp/common/form_format_category.xhtml
@@ -1,19 +1,19 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1transitional.dtd">
 <ui:composition xmlns:ui="http://java.sun.com/jsf/facelets"
-                template="/resources/template/template.xhtml"
+                template="/admin/admin_items_index.xhtml"
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:p="http://primefaces.org/ui">
-    <ui:define name="content">
+    <ui:define name="item">
         <h:form  >
             <p:focus id="selectFocus" for="lstSelect"  />
             <p:focus id="detailFocus" for="txtName" />
             <p:panel header="Manage Report Format Categories" >
                 <p:panelGrid columns="2" styleClass="alignTop" >
                     <p:panel  >
-                        <p:selectOneListbox   id="lstSelect"   value="#{formFormatController.current}" styleClass="listBox">
+                        <p:selectOneListbox   id="lstSelect"   value="#{formFormatController.current}" styleClass="listBox" scrollHeight="500" class="w-100" style="min-width: 400px">
                             <f:selectItems  value="#{formFormatController.items}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" ></f:selectItems>
                             <f:ajax render=":#{p:resolveFirstComponentWithId('gpDetail',view).clientId}" execute="lstSelect" >
                             </f:ajax>
@@ -24,13 +24,13 @@
                                     return false;" action="#{formFormatController.delete()}"  value="Delete"  >
                         </p:commandButton>
                     </p:panel>
-                    <p:panel  style="float: right;display: block;">
+                    <p:panel  style="float: right;display: block; height: 570px">
                         <h:panelGrid id="gpDetail" columns="2" >
-                            <h:outputText id="lblName" value="Name" ></h:outputText>
-                            <p:inputText autocomplete="off" id="txtName" value="#{formFormatController.current.name}"  ></p:inputText>
+                            <h:outputText id="lblName" value="Name"></h:outputText>
+                            <p:inputText autocomplete="off" id="txtName" value="#{formFormatController.current.name}" style="width: 450px;" ></p:inputText>
                             <h:outputText id="lblCode" value="Descreption" >                                        
                             </h:outputText>
-                            <p:inputTextarea id="txtCode"  value="#{formFormatController.current.description}"  >
+                            <p:inputTextarea id="txtCode"  value="#{formFormatController.current.description}" style="width: 450px;" >
                             </p:inputTextarea>
                             <p:commandButton ajax="false" id="btnSave" value="Save" action="#{formFormatController.saveSelected()}" styleClass="buttons" onclick="onSubmitButton();" >
                             </p:commandButton>
