--- a/src/main/webapp/inward/inward_service.xhtml
+++ b/src/main/webapp/inward/inward_service.xhtml
@@ -1,14 +1,14 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns:ui="http://java.sun.com/jsf/facelets"
-                template="/resources/template/template.xhtml"
+                template="/admin/admin_items_index.xhtml"
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:p="http://primefaces.org/ui">
 
 
-    <ui:define name="content">
+    <ui:define name="item">
 
         <h:panelGroup >
             <h:form id="form"  >
@@ -21,11 +21,11 @@
                             <p:panel header="Search Service" >
                                 <h:panelGrid id="gpSelectText" >
 
-                                    <h:inputText autocomplete="off" id="txtSearch" value="#{inwardServiceController.selectText}" >
+                                    <h:inputText autocomplete="off" id="txtSearch" value="#{inwardServiceController.selectText}" style="width: 400px;" >
                                         <f:ajax execute="txtSearch" render="lstSelect" event="keyup" />
                                     </h:inputText>
 
-                                    <p:selectOneListbox converter="serv"   id="lstSelect"   value="#{inwardServiceController.current}" style="min-width: 223px; height: 300px;">
+                                    <p:selectOneListbox converter="serv"   id="lstSelect"   value="#{inwardServiceController.current}" style="min-width: 400px;" scrollHeight="500" class="w-100">
                                         <f:selectItems  value="#{inwardServiceController.selectedItems}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" >
                                         </f:selectItems>
                                         <p:ajax event="change"   update="gpDetail" process="lstSelect" >
@@ -48,7 +48,7 @@
                             </p:panel>
                         </h:panelGrid  >
 
-                        <p:panel header="Edit Details">
+                        <p:panel header="Edit Details" style="height: 630px">
                             <f:facet name="header" >
 
                                 <h:outputLabel value="Edit Details" ></h:outputLabel>
@@ -67,16 +67,17 @@
 
 
                                     <h:outputText id="lblName" value="Name" ></h:outputText>
-                                    <h:inputText autocomplete="off" id="txtName" value="#{inwardServiceController.current.name}" required="true" ></h:inputText>
+                                    <h:inputText autocomplete="off" id="txtName" value="#{inwardServiceController.current.name}" required="true" style="width: 400px;"></h:inputText>
                                     <h:outputText id="lblAddress" value="Printing Name" ></h:outputText>
-                                    <h:inputText autocomplete="off" id="txtAddress"   value="#{inwardServiceController.current.printName}"  ></h:inputText>
+                                    <h:inputText autocomplete="off" id="txtAddress"   value="#{inwardServiceController.current.printName}"  style="width: 400px;"></h:inputText>
                                     <h:outputText id="lblFullName" value="Full Name" ></h:outputText>
-                                    <h:inputText autocomplete="off" id="txtFullName"   value="#{inwardServiceController.current.fullName}"  ></h:inputText>
+                                    <h:inputText autocomplete="off" id="txtFullName"   value="#{inwardServiceController.current.fullName}" style="width: 400px;" ></h:inputText>
                                     <p:outputLabel value="Item Code"/>
-                                    <p:inputText autocomplete="off" value="#{inwardServiceController.current.code}"/>
+                                    <p:inputText autocomplete="off" value="#{inwardServiceController.current.code}" style="width: 400px;"/>
 
                                     <h:outputText value="Service Category/Sub Category" ></h:outputText>
                                     <p:autoComplete converter="categoryConverter" 
+                                                    style="width: 400px;"
                                                     completeMethod="#{categoryController.completeServiceCategory}" 
                                                     var="pta" itemLabel="#{pta.name} #{pta.parentCategory}" itemValue="#{pta}" 
                                                     forceSelection="true" value="#{inwardServiceController.current.category}" >                                    
@@ -88,34 +89,34 @@
                                         <p:ajax event="change" process="@this" update="billedAsIx" />
                                     </p:selectBooleanCheckbox>
                                     <p:autoComplete converter="serv"  disabled="#{!inwardServiceController.billedAs}" 
-                                                    widgetVar="aIx1" id="billedAsIx" forceSelection="true" 
-                                                    value="#{inwardServiceController.current.billedAs}" completeMethod="#{inwardServiceController.completeItem}" var="ix1" itemLabel="#{ix1.name}" itemValue="#{ix1}" size="30"  style="width: 400px;">
+                                                    widgetVar="aIx1" id="billedAsIx" forceSelection="true" style="width: 400px;"
+                                                    value="#{inwardServiceController.current.billedAs}" completeMethod="#{inwardServiceController.completeItem}" var="ix1" itemLabel="#{ix1.name}" itemValue="#{ix1}" size="30">
                                     </p:autoComplete>
 
                                     <p:selectBooleanCheckbox  id="chkReportedAs" value="#{inwardServiceController.reportedAs}" itemLabel="Reported as a seperate investigation" >
                                         <p:ajax event="change" process="@this" update="reportedAsIx" />
                                     </p:selectBooleanCheckbox>
-                                    <p:autoComplete converter="serv" disabled="#{!inwardServiceController.reportedAs}" widgetVar="aIx2" id="reportedAsIx" forceSelection="true" value="#{inwardServiceController.current.reportedAs}" completeMethod="#{inwardServiceController.completeItem}" var="ix2" itemLabel="#{ix2.name}" itemValue="#{ix2}" size="30"  style="width: 400px;">
+                                    <p:autoComplete converter="serv" disabled="#{!inwardServiceController.reportedAs}" widgetVar="aIx2" style="width: 400px;" id="reportedAsIx" forceSelection="true" value="#{inwardServiceController.current.reportedAs}" completeMethod="#{inwardServiceController.completeItem}" var="ix2" itemLabel="#{ix2.name}" itemValue="#{ix2}" size="30"  >
                                     </p:autoComplete>
 
                                     <h:outputText value="Institution" ></h:outputText>
-                                    <p:selectOneMenu id="cmbIns" value="#{inwardServiceController.current.institution}" >
+                                    <p:selectOneMenu id="cmbIns" value="#{inwardServiceController.current.institution}" style="width: 400px;">
                                         <f:selectItem itemLabel="Please select a Institution"/>
                                         <f:selectItems value="#{institutionController.companies}" var="cat" itemLabel="#{cat.name}" itemValue="#{cat}" />
                                         <f:ajax execute="cmbIns" render="cmbDep" event="change"/>                                        
                                     </p:selectOneMenu>
                                     <h:outputText value="Department" ></h:outputText>
-                                    <p:selectOneMenu id="cmbDep" value="#{inwardServiceController.current.department}" >
+                                    <p:selectOneMenu id="cmbDep" value="#{inwardServiceController.current.department}" style="width: 400px;">
                                         <f:selectItem itemLabel="Please select a Department"/>
                                         <f:selectItems value="#{inwardServiceController.institutionDepatrments}" var="cat" itemLabel="#{cat.name}" itemValue="#{cat}" />
                                     </p:selectOneMenu>
                                     <h:outputText value="Inward Charge Category" ></h:outputText>
-                                    <p:selectOneMenu id="cmbInward" value="#{inwardServiceController.current.inwardChargeType}" >
+                                    <p:selectOneMenu id="cmbInward" value="#{inwardServiceController.current.inwardChargeType}" style="width: 400px;">
                                         <f:selectItem itemLabel="Please select Charge"/>
                                         <f:selectItems value="#{enumController.inwardChargeTypesForSetting}" var="i" itemLabel="#{i.label}" itemValue="#{i}"/>
                                     </p:selectOneMenu>
                                     <h:outputText value="Session Numbering" ></h:outputText>
-                                    <p:selectOneMenu  value="#{inwardServiceController.current.sessionNumberType}" >
+                                    <p:selectOneMenu  value="#{inwardServiceController.current.sessionNumberType}" style="width: 400px;">
                                         <f:selectItem itemLabel="Please select Session Numbering"/>
                                         <f:selectItems value="#{inwardServiceController.sessionNumberType}"/>
                                     </p:selectOneMenu>
