--- a/src/main/webapp/opd_service.xhtml
+++ b/src/main/webapp/opd_service.xhtml
@@ -1,14 +1,14 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns:ui="http://java.sun.com/jsf/facelets"
-                template="/resources/template/template.xhtml"
+                template="/admin/admin_items_index.xhtml"
                 xmlns:h="http://java.sun.com/jsf/html"
                 xmlns:f="http://java.sun.com/jsf/core"
                 xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:p="http://primefaces.org/ui">
 
 
-    <ui:define name="content">
+    <ui:define name="item">
 
         <h:panelGroup >
             <h:form id="form"  >
@@ -21,11 +21,11 @@
                             <p:panel header="Search Active Service" >
                                 <h:panelGrid id="gpSelectText" >
 
-                                    <h:inputText autocomplete="off" id="txtSearch" value="#{serviceController.selectText}" >
+                                    <h:inputText autocomplete="off" id="txtSearch" value="#{serviceController.selectText}"  style="width: 350px;">
                                         <f:ajax execute="txtSearch" render="lstSelect" event="keyup" />
                                     </h:inputText>
 
-                                    <p:selectOneListbox converter="serv"   id="lstSelect"   value="#{serviceController.current}" style="min-width: 223px; height: 300px;">
+                                    <p:selectOneListbox converter="serv" scrollHeight="500" class="w-100"  id="lstSelect"   value="#{serviceController.current}" style="min-width: 350px; ">
                                         <f:selectItems  value="#{serviceController.selectedItems}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" >
                                         </f:selectItems>
                                         <p:ajax event="change"   update="gpDetail btnDelete" process="lstSelect" >
@@ -50,11 +50,11 @@
                             <p:panel header="Search Inactive Service(Can't Edit Properties)" >
                                 <h:panelGrid id="gpSelectTextAct" >
 
-                                    <h:inputText autocomplete="off" id="txtSearchAct" value="#{serviceController.selectRetiredText}" >
+                                    <h:inputText autocomplete="off" id="txtSearchAct" value="#{serviceController.selectRetiredText}" style="width: 350px;" >
                                         <f:ajax execute="txtSearchAct" render="lstSelectAct" event="keyup" />
                                     </h:inputText>
 
-                                    <p:selectOneListbox converter="serv"   id="lstSelectAct"   value="#{serviceController.currentInactiveService}" style="min-width: 223px; height: 300px;">
+                                    <p:selectOneListbox converter="serv"   id="lstSelectAct" scrollHeight="500" class="w-100"  value="#{serviceController.currentInactiveService}" style="min-width: 350px;">
                                         <f:selectItems  value="#{serviceController.retiredSelectedItems}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" >
                                         </f:selectItems>
                                         <p:ajax event="change"   update="gpDetail" process="lstSelectAct" >
@@ -72,7 +72,7 @@
 
                         </h:panelGrid  >
 
-                        <p:panel header="Edit Details">
+                        <p:panel header="Edit Details" style="height: 1270px">
                             <f:facet name="header" >
 
                                 <h:outputLabel value="Edit Details" ></h:outputLabel>
@@ -89,16 +89,16 @@
                                     <h:outputText id="lblid" value="Name" ></h:outputText>
                                     <h:outputText id="lblidName" value="#{serviceController.current.id}" ></h:outputText>
                                     <h:outputText id="lblName" value="Name" ></h:outputText>
-                                    <h:inputText autocomplete="off" id="txtName" value="#{serviceController.current.name}" required="true" ></h:inputText>
+                                    <h:inputText autocomplete="off" id="txtName" value="#{serviceController.current.name}" required="true" style="width: 400px;"></h:inputText>
                                     <h:outputText id="lblAddress" value="Printing Name" ></h:outputText>
-                                    <h:inputText autocomplete="off" id="txtAddress"   value="#{serviceController.current.printName}"  ></h:inputText>
+                                    <h:inputText autocomplete="off" id="txtAddress"   value="#{serviceController.current.printName}" style="width: 400px;" ></h:inputText>
                                     <h:outputText id="lblFullName" value="Full Name" ></h:outputText>
-                                    <h:inputText autocomplete="off" id="txtFullName"   value="#{serviceController.current.fullName}"  ></h:inputText>
+                                    <h:inputText autocomplete="off" id="txtFullName"   value="#{serviceController.current.fullName}" style="width: 400px;" ></h:inputText>
                                     <p:outputLabel value="Item Code"/>
-                                    <p:inputText autocomplete="off" value="#{serviceController.current.code}"/>
+                                    <p:inputText autocomplete="off" value="#{serviceController.current.code}" style="width: 400px;"/>
                                     <h:outputText id="lblVatPercentage" value="VAT Percentage" ></h:outputText>
                                     <p:inputText styleClass="longText pdInputText" autocomplete="off"   
-                                                 value="#{serviceController.current.vatPercentage}"  ></p:inputText>
+                                                 value="#{serviceController.current.vatPercentage}"  style="width: 400px;"></p:inputText>
 
 
                                     <h:outputText value="VATable" ></h:outputText>
@@ -108,7 +108,7 @@
                                     <p:autoComplete converter="categoryConverter" 
                                                     completeMethod="#{categoryController.completeServiceCategory}" 
                                                     var="pta" itemLabel="#{pta.name} #{pta.parentCategory}" itemValue="#{pta}" 
-                                                    forceSelection="true" value="#{serviceController.current.category}" >                                    
+                                                    forceSelection="true" value="#{serviceController.current.category}" style="width: 400px;">                                    
                                         <p:column>#{pta.name}</p:column>
                                         <p:column>#{pta.parentCategory}</p:column>                                        
                                     </p:autoComplete>
@@ -117,7 +117,7 @@
                                         <p:ajax event="change" process="@this" update="billedAsIx" />
                                     </p:selectBooleanCheckbox>
                                     <p:autoComplete converter="serv"  disabled="#{!serviceController.billedAs}" 
-                                                    widgetVar="aIx1" id="billedAsIx" forceSelection="true" 
+                                                    widgetVar="aIx1" id="billedAsIx" forceSelection="true"
                                                     value="#{serviceController.current.billedAs}" completeMethod="#{serviceController.completeItem}" var="ix1" itemLabel="#{ix1.name}" itemValue="#{ix1}" size="30"  style="width: 400px;">
                                     </p:autoComplete>
 
@@ -128,23 +128,23 @@
                                     </p:autoComplete>
 
                                     <h:outputText value="Institution" ></h:outputText>
-                                    <p:selectOneMenu id="cmbIns" value="#{serviceController.current.institution}" >
+                                    <p:selectOneMenu id="cmbIns" value="#{serviceController.current.institution}" style="width: 400px;">
                                         <f:selectItem itemLabel="Please select a Institution"/>
                                         <f:selectItems value="#{institutionController.companies}" var="cat" itemLabel="#{cat.name}" itemValue="#{cat}" />
                                         <f:ajax execute="cmbIns" render="cmbDep" event="change"/>                                        
                                     </p:selectOneMenu>
                                     <h:outputText value="Department" ></h:outputText>
-                                    <p:selectOneMenu id="cmbDep" value="#{serviceController.current.department}" >
+                                    <p:selectOneMenu id="cmbDep" value="#{serviceController.current.department}" style="width: 400px;">
                                         <f:selectItem itemLabel="Please select a Department"/>
                                         <f:selectItems value="#{serviceController.institutionDepatrments}" var="cat" itemLabel="#{cat.name}" itemValue="#{cat}" />
                                     </p:selectOneMenu>
                                     <h:outputText value="Inward Charge Category" ></h:outputText>
-                                    <p:selectOneMenu id="cmbInward" value="#{serviceController.current.inwardChargeType}" >
+                                    <p:selectOneMenu id="cmbInward" value="#{serviceController.current.inwardChargeType}" style="width: 400px;">
                                         <f:selectItem itemLabel="Please select Charge"/>
                                         <f:selectItems value="#{enumController.inwardChargeTypesForSetting}" var="i" itemLabel="#{i.label}" itemValue="#{i}"/>
                                     </p:selectOneMenu>
                                     <h:outputText value="Session Numbering" ></h:outputText>
-                                    <p:selectOneMenu  value="#{serviceController.current.sessionNumberType}" >
+                                    <p:selectOneMenu  value="#{serviceController.current.sessionNumberType}" style="width: 400px;">
                                         <f:selectItem itemLabel="Please select Session Numbering"/>
                                         <f:selectItems value="#{serviceController.sessionNumberType}"/>
                                     </p:selectOneMenu>
