Signed-off-by: Senula88 <senulananayakkara88@gmail.com>

--- a/src/main/webapp/admin/institutions/department.xhtml
+++ b/src/main/webapp/admin/institutions/department.xhtml
@@ -8,7 +8,7 @@
 
     <body>
 
-        <ui:composition template="./admin_institutions_index.xhtml">
+        <ui:composition template="admin_institutions_index.xhtml">
 
             <ui:define name="admin">
 
