--- a/src/main/webapp/opd_administration.xhtml
+++ b/src/main/webapp/opd_administration.xhtml
@@ -32,7 +32,7 @@
 
 
 
-                                <p:commandButton  styleClass="linkButton" ajax="false" value="New User" action="admin_add_new_user" actionListener="#{webUserController.prepairAddNewUser()}"/>
+                                <p:commandButton  styleClass="linkButton" ajax="false" value="New User" action="/admin/users/admin_add_new_user" actionListener="#{webUserController.prepairAddNewUser()}"/>
                                 <p:commandButton  styleClass="linkButton" ajax="false" value="Manage User Privialges" action="user_privilages"/>
                                 <p:commandButton  styleClass="linkButton" ajax="false" value="Add Department to User" action="user_department"/>
                                 <p:commandButton  styleClass="linkButton" ajax="false" value="Add Signature for staff" action="staff_signature"/>
