--- a/src/main/webapp/admin/institutions/admin_mange_application_preferences.xhtml
+++ b/src/main/webapp/admin/institutions/admin_mange_application_preferences.xhtml
@@ -8,15 +8,12 @@
       xmlns:ez="http://java.sun.com/jsf/composite/ezcomp">
 
     <h:body>
-        <ui:composition template="/admin/admin_institutions_index.xhtml">
+        <ui:composition template="admin_institutions_index.xhtml">
             <ui:define name="admin">
                 <h:form>
-                    <ez:preferences department="#{sessionController.department}"/>
+                    <ez:preferences/>
                 </h:form>
             </ui:define>
-
-
         </ui:composition>
-
     </h:body>
 </html>
