--- a/src/main/webapp/admin/institutions/institution.xhtml
+++ b/src/main/webapp/admin/institutions/institution.xhtml
@@ -9,7 +9,7 @@
 
     <body>
 
-        <ui:composition template="./admin_institutions_index.xhtml">
+        <ui:composition template="admin_institutions_index.xhtml">
 
             <ui:define name="admin">
 
