--- a/src/main/webapp/admin/users/admin_logins_all.xhtml
+++ b/src/main/webapp/admin/users/admin_logins_all.xhtml
@@ -8,7 +8,7 @@
 
     <h:body>
 
-        <ui:composition template="/admin_manage_users.xhtml">
+        <ui:composition template="admin_manage_users.xhtml">
 
             <ui:define name="subcontent">
                 <h:form>
